--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Updock&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
     <title>isabellaferreira</title>
   </head>
   <body>
@@ -36,5 +37,17 @@
         </ul>
       </nav>
     </header>
+    <div class="sobre" id="sobre">
+      <div class="left-about">
+        <h3 class="little-text">Olá, meu nome é</h3>
+        <h1 class="name">ISABELLA</h1>
+        <h1 class="name">FERREIRA</h1>
+        <p>Eu sou uma desenvolvedora Full-Stack em formação buscando novos
+        desafios e crescimento profissional.</p>
+      </div>
+      <div class="right-about">
+        <img src="./img/IMG_1820.PNG">
+      </div>
+    </div>
   </body>
 </html>
