feat: adicionando botões de contato

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav>
         <ul class="navbar">
           <li>
-            <a href="#">Sobre</a>
+            <a href="#sobre">Sobre</a>
           </li>
           <li>
             <a href="#">Skills</a>
@@ -45,6 +45,17 @@
         <p>Eu sou uma desenvolvedora Full-Stack em formação buscando novos
         desafios e crescimento profissional.</p>
       </div>
+        <div class="contact-icon">
+          <li>
+           <a target="__blank" href="https://github.com/isocabp"> <img src="./img/github.png"></a>
+          </li>
+          <li>
+           <a target="__blank" href="https://www.linkedin.com/in/isabellabferreira/"> <img src="./img/linkedin.png"></a>
+          </li>
+          <li>
+           <a target="__blank" href="https://www.instagram.com/isocabf/"> <img src="./img/instagram.png"></a>
+          </li>
+        </div>
       <div class="right-about">
         <img src="./img/IMG_1820.PNG">
       </div>
