feat: adicionando box-shadow

--- a/index.html
+++ b/index.html
@@ -37,27 +37,29 @@
         </ul>
       </nav>
     </header>
-    <div class="sobre" id="sobre">
+    <div id="sobre">
       <div class="left-about">
         <h3 class="little-text">Olá, meu nome é</h3>
         <h1 class="name">ISABELLA</h1>
         <h1 class="name">FERREIRA</h1>
         <p>Eu sou uma desenvolvedora Full-Stack em formação buscando novos
         desafios e crescimento profissional.</p>
-      </div>
         <div class="contact-icon">
           <li>
-           <a target="__blank" href="https://github.com/isocabp"> <img src="./img/github.png"></a>
+           <a target="__blank" href="https://github.com/isocabp"> <img class="icon-social" src="./img/github.png"></a>
           </li>
           <li>
-           <a target="__blank" href="https://www.linkedin.com/in/isabellabferreira/"> <img src="./img/linkedin.png"></a>
+           <a target="__blank" href="https://www.linkedin.com/in/isabellabferreira/"> <img class="icon-social" src="./img/linkedin.png"></a>
           </li>
           <li>
-           <a target="__blank" href="https://www.instagram.com/isocabf/"> <img src="./img/instagram.png"></a>
+           <a target="__blank" href="https://www.instagram.com/isocabf/"> <img class="icon-social" src="./img/instagram.png"></a>
           </li>
         </div>
+      </div>
+
+        
       <div class="right-about">
-        <img src="./img/IMG_1820.PNG">
+        <img class="img-icon" src="./img/IMG_1820.PNG">
       </div>
     </div>
   </body>
