feat: fazendo meu sobre

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav>
         <ul class="navbar">
           <li>
-            <a href="#sobre">Sobre</a>
+            <a href="#about">Sobre</a>
           </li>
           <li>
             <a href="#">Skills</a>
@@ -42,7 +42,7 @@
         <h3 class="little-text">Olá, meu nome é</h3>
         <h1 class="name">ISABELLA</h1>
         <h1 class="name">FERREIRA</h1>
-        <p>Eu sou uma desenvolvedora Full-Stack em formação buscando novos
+        <p class="p-resume">Eu sou uma desenvolvedora Full-Stack em formação buscando novos
         desafios e crescimento profissional.</p>
         <div class="contact-icon">
           <li>
@@ -55,12 +55,22 @@
            <a target="__blank" href="https://www.instagram.com/isocabf/"> <img class="icon-social" src="./img/instagram.png"></a>
           </li>
         </div>
-      </div>
-
-        
+      </div>        
       <div class="right-about">
         <img class="img-icon" src="./img/IMG_1820.PNG">
       </div>
+    </div>
+    <div id="about">
+      <h3 class="title-about">SOBRE</h3>
+      <p class="p-about">Meu interesse e primeiro contato com desenvolvimento web começou em
+        2008 com o Tumblr, quando decidi tentar editar e criar novos temas
+        personalizados e isso me fez descobrir e amar HTML e CSS.Atualmente estudo na Digital House e curso Desenvolvimento Web
+        Full-Stack. </p>
+        <p class="p-about">O que busco entregar como profissional para uma empresa é:
+          Ser diligente e responsável nas tarefas que me atribuem, busco sempre
+          por feedbacks e repassar o que penso também, gosto de ser desafiada e
+          me propor que melhore meu trabalho ou alguma rotina é extremamente
+          excitante pois acredito no potencial de mudança e evolução. </p>
     </div>
   </body>
 </html>
