feat: finalizando estilização do sobre e começando minhas skills

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fe2b458acb.js" crossorigin="anonymous"></script>
     <title>isabellaferreira</title>
   </head>
   <body>
@@ -26,7 +27,7 @@
             <a href="#about">Sobre</a>
           </li>
           <li>
-            <a href="#">Skills</a>
+            <a href="#skills">Skills</a>
           </li>
           <li>
             <a href="#">Projetos</a>
@@ -37,7 +38,7 @@
         </ul>
       </nav>
     </header>
-    <div id="sobre">
+    <div id="resume">
       <div class="left-about">
         <h3 class="little-text">Olá, meu nome é</h3>
         <h1 class="name">ISABELLA</h1>
@@ -45,14 +46,14 @@
         <p class="p-resume">Eu sou uma desenvolvedora Full-Stack em formação buscando novos
         desafios e crescimento profissional.</p>
         <div class="contact-icon">
-          <li>
-           <a target="__blank" href="https://github.com/isocabp"> <img class="icon-social" src="./img/github.png"></a>
+          <li class="git-contact">
+           <a target="__blank" href="https://github.com/isocabp"> <i class="fa-brands fa-github fa-2x" ></i> </a>
           </li>
-          <li>
-           <a target="__blank" href="https://www.linkedin.com/in/isabellabferreira/"> <img class="icon-social" src="./img/linkedin.png"></a>
+          <li class="li-contact">
+           <a target="__blank" href="https://www.linkedin.com/in/isabellabferreira/"> <i class="fa-brands fa-linkedin fa-2x" ></i></a>
           </li>
-          <li>
-           <a target="__blank" href="https://www.instagram.com/isocabf/"> <img class="icon-social" src="./img/instagram.png"></a>
+          <li class="insta-contact">
+           <a target="__blank" href="https://www.instagram.com/isocabf/"> <i class="fa-brands fa-instagram fa-2x" ></i> </a>
           </li>
         </div>
       </div>        
@@ -71,6 +72,49 @@
           por feedbacks e repassar o que penso também, gosto de ser desafiada e
           me propor que melhore meu trabalho ou alguma rotina é extremamente
           excitante pois acredito no potencial de mudança e evolução. </p>
+    </div>
+
+    <div id="skills">
+      <h3 class="title-skills">SKILLS</h3>
+        <div class="hard-skills">
+          <h3 class="sub-title">HARD SKILLS</h3>  
+          <div class="skills-item">
+            <i class="fa-brands fa-html5"></i>
+            <p>HTML</p>
+          </div>
+          <div class="skills-item">
+            <i class="fa-brands fa-css3-alt"></i>
+            <p>CSS</p>
+          </div>
+          <div class="skills-item">
+            <i class="fa-brands fa-js"></i>
+            <p>JavaScript</p>
+          </div>
+          <div class="skills-item">
+            <i class="fa-brands fa-node-js"></i>
+            <p>Node.js</p>
+          </div>
+        </div>
+        <div class="soft-skills">
+          <h3 class="sub-title">SOFT SKILLS</h3>
+          <div class="skills-item">
+            <i class="fa-solid fa-comments"></i>
+            <p>Comunicação</p>
+          </div>
+          <div class="skills-item">
+            <i class="fa-solid fa-user-group"></i>
+            <p>Trabalho em grupo</p>
+          </div>
+          <div class="skills-item">
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            <p>Adaptável</p>
+          </div>
+          <div class="skills-item">
+            <i class="fa-solid fa-head-side-brain"></i>
+            <p>Rápido aprendizado</p>
+          </div>
+        </div>
+
     </div>
   </body>
 </html>
