feat: finaliznado o portifolio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#skills">Skills</a>
           </li>
           <li>
-            <a href="#">Projetos</a>
+            <a href="#projetos">Projetos</a>
           </li>
           <li>
             <a href="#">Contato</a>
@@ -76,45 +76,94 @@
 
     <div id="skills">
       <h3 class="title-skills">SKILLS</h3>
-        <div class="hard-skills">
+        <div class="content-skills">
           <h3 class="sub-title">HARD SKILLS</h3>  
           <div class="skills-item">
-            <i class="fa-brands fa-html5"></i>
-            <p>HTML</p>
-          </div>
-          <div class="skills-item">
-            <i class="fa-brands fa-css3-alt"></i>
-            <p>CSS</p>
-          </div>
-          <div class="skills-item">
-            <i class="fa-brands fa-js"></i>
-            <p>JavaScript</p>
-          </div>
-          <div class="skills-item">
-            <i class="fa-brands fa-node-js"></i>
-            <p>Node.js</p>
-          </div>
-        </div>
-        <div class="soft-skills">
+            <div class="content-item">
+              <i class="fa-brands fa-html5 fa-2x"></i>
+              <p class="p-skills">HTML</p> 
+            </div>  
+            <div class="content-item">      
+              <i class="fa-brands fa-css3-alt fa-2x"></i>
+              <p class="p-skills">CSS</p>   
+            </div>
+            <div class="content-item">                 
+              <i class="fa-brands fa-js fa-2x"></i>
+              <p class="p-skills">JavaScript</p>  
+            </div>
+            <div class="content-item">
+              <i class="fa-brands fa-node-js fa-2x"></i>
+              <p class="p-skills">Node.js</p>  
+            </div>
+          </div>                
+                 
           <h3 class="sub-title">SOFT SKILLS</h3>
           <div class="skills-item">
-            <i class="fa-solid fa-comments"></i>
-            <p>Comunicação</p>
+            <div class="content-item">
+              <i class="fa-solid fa-comments fa-2x"></i>
+              <p class="p-skills">Comunicação</p>
+            </div>
+            <div class="content-item">
+              <i class="fa-solid fa-user-group fa-2x"></i>
+              <p class="p-skills">Trabalho em grupo</p>
+            </div>
+            <div class="content-item">
+              <i class="fa-solid fa-screwdriver-wrench fa-2x"></i>
+              <p class="p-skills">Adaptável</p>
+            </div>
+            <div class="content-item">
+              <img class="svg" src="./img/idea-svgrepo-com.svg">
+              <p class="p-skills">Rápido aprendizado</p>
+            </div>
+        </div>
+      </div>
+    </div>
+      <div id="projetos">
+        <h3 class="title-project">PROJETOS</h3>
+        <div class="projeto-calc">
+          <h4 class="subt-project">Calculadora</h4>
+          <div class="icon-calc">
+            <i class="fa-solid fa-calculator fa-2x"></i>
           </div>
-          <div class="skills-item">
-            <i class="fa-solid fa-user-group"></i>
-            <p>Trabalho em grupo</p>
-          </div>
-          <div class="skills-item">
-            <i class="fa-solid fa-screwdriver-wrench"></i>
-            <p>Adaptável</p>
-          </div>
-          <div class="skills-item">
-            <i class="fa-solid fa-head-side-brain"></i>
-            <p>Rápido aprendizado</p>
+          <p class="p-project">Uma calculadora simples criada com HTML, CSS e JavaScript</p>
+          <div class="btn-project">
+              <a target="__blank" href="https://isacalculator.netlify.app/">Projeto</a>
+              <a target="__blank" href="https://github.com/isocabp/calculadora">Github</a>
           </div>
         </div>
-
-    </div>
+      </div>
+      <div id="contato">
+        <h3 class="title-contact">CONTATO</h3>
+        <div class="socialmedia-contact">
+          <h4 class="sub-contact">Me encontre nas redes sociais</h4>
+          <div class="link-socialmedias">
+            <a target="__blank" href="https://github.com/isocabp"> <i class="fa-brands fa-github fa-3x" ></i> </a>
+            <a target="__blank" href="https://www.linkedin.com/in/isabellabferreira/"> <i class="fa-brands fa-linkedin fa-3x" ></i></a>
+            <a target="__blank" href="https://www.instagram.com/isocabf/"> <i class="fa-brands fa-instagram fa-3x" ></i> </a>
+          </div>
+        </div>
+        <div class="form">
+          <h4 class="sub-contact">Ou me mande um email</h4>
+          <div class="name-form"> 
+            <h4 class="sub-form">Seu Nome</h4>
+            <input type="text" placeholder="Name">
+          </div>
+          <div class="email-form">
+            <h4 class="sub-form">Seu Email</h4>
+            <input type="text" placeholder="Email">
+          </div>
+          <div class="txt-form">
+            <h4 class="sub-form">Sua Mensagem</h4>
+            <textarea placeholder="Mensagem" cols="30" rows="10"></textarea>
+          </div>
+          <div class="btn-form">
+            <button class="sub-btn">Enviar</button>
+          </div>
+        </div>
+      </div>
   </body>
+
+  <footer>
+    <p>© 2022 | Isabella Borges Ferreira</p>
+  </footer>
 </html>
