--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./reset.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./bases.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap"
       rel="stylesheet"
@@ -22,7 +22,13 @@
     <header>
       <a class="tittle" href="#">isabellaferreira</a>
       <nav>
-        <ul class="navbar">
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+
+        <ul class="nav-list">
           <li>
             <a href="#about">Sobre</a>
           </li>
@@ -33,7 +39,7 @@
             <a href="#projetos">Projetos</a>
           </li>
           <li>
-            <a href="#">Contato</a>
+            <a href="#contato">Contato</a>
           </li>
         </ul>
       </nav>
@@ -62,7 +68,7 @@
       </div>
     </div>
     <div id="about">
-      <h3 class="title-about">SOBRE</h3>
+      <h3 class="title-content">SOBRE</h3>
       <p class="p-about">Meu interesse e primeiro contato com desenvolvimento web começou em
         2008 com o Tumblr, quando decidi tentar editar e criar novos temas
         personalizados e isso me fez descobrir e amar HTML e CSS.Atualmente estudo na Digital House e curso Desenvolvimento Web
@@ -75,7 +81,7 @@
     </div>
 
     <div id="skills">
-      <h3 class="title-skills">SKILLS</h3>
+      <h3 class="title-content">SKILLS</h3>
         <div class="content-skills">
           <h3 class="sub-title">HARD SKILLS</h3>  
           <div class="skills-item">
@@ -119,7 +125,7 @@
       </div>
     </div>
       <div id="projetos">
-        <h3 class="title-project">PROJETOS</h3>
+        <h3 class="title-content">PROJETOS</h3>
         <div class="projeto-calc">
           <h4 class="subt-project">Calculadora</h4>
           <div class="icon-calc">
@@ -133,7 +139,7 @@
         </div>
       </div>
       <div id="contato">
-        <h3 class="title-contact">CONTATO</h3>
+        <h3 class="title-content">CONTATO</h3>
         <div class="socialmedia-contact">
           <h4 class="sub-contact">Me encontre nas redes sociais</h4>
           <div class="link-socialmedias">
@@ -161,6 +167,7 @@
           </div>
         </div>
       </div>
+      <script src="app.js"></script>
   </body>
 
   <footer>
