feat: add fav icon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <script src="https://kit.fontawesome.com/fe2b458acb.js" crossorigin="anonymous"></script>
     <title>isabellaferreira</title>
   </head>
